# geozilla-2

./: .gitignore  .gitmodules  README.md  build-core.bat  run-back.bat  run-front.bat
.github/workflows/: dotnet-build.yml  react-build.yml
geozilla/geozilla-api/: Program.Injections.cs  geozilla-api.csproj
geozilla/geozilla-api/Endpoints/GeneratorGeoJson/: GeneratoGeoJsonApi.cs
geozilla/geozilla-api/Endpoints/GeneratorGeoJson/Requests/: GenerateGeoJsonRequest.cs
geozilla/geozilla-bl/: geozilla-bl.csproj
geozilla/geozilla-bl/Services/Generation/Abstract/: IGeoJsonService.cs
geozilla/geozilla-bl/Services/Generation/Concrete/: GeoJsonService.cs  GeozillaCoreDll.cs
geozilla/geozilla-bl/Services/Visualizer/: IVisualizer.cs  Visualizer.cs
geozilla/geozilla-core/: CMakeLists.txt  build-solution.bat  download-libs.bat  generate-solution.bat
geozilla/geozilla-core/source/: CMakeLists.txt  GeozillaCore.cpp
geozilla/geozilla-core/source/app/: CMakeLists.txt  Main.cpp
geozilla/geozilla-core/source/core/: CMakeLists.txt  GeoTypes.h  GeozillaCore.cpp  GeozillaCore.h
geozilla/geozilla-core/source/core/Algorithm/: ConcaveHullGenerator.cpp  ConcaveHullGenerator.h  GeoJsonGenerator.cpp  GeoJsonGenerator.h  GltfToPointCloudConverter.cpp  GltfToPointCloudConverter.h  PolygonGenerator.cpp  PolygonGenerator.h
geozilla/geozilla-core/source/core/Converter/: GltfToPointCloudConverter.cpp  GltfToPointCloudConverter.h
geozilla/geozilla-core/source/core/Loader/: B3dmLoader.cpp  GeoModelLoader.cpp  IGeoModelLoader.h
geozilla/geozilla-core/source/core/ZoneSplitter/: ZoneSplitter.cpp  ZoneSplitter.h
geozilla/geozilla-react/: package-lock.json  package.json  tsconfig.json
geozilla/geozilla-react/public/: elf.gltf  index.html
geozilla/geozilla-react/src/: App.css  App.tsx
geozilla/geozilla-react/src/api/: GenerateGeoJsonApi.ts
geozilla/geozilla-react/src/components/: ActiveLayerSelector.tsx  CoordinateInput.tsx  DataSender.tsx  Elf.jsx  FigureCreator.tsx  FileUploader.tsx  MapEditor.tsx  MapSettings.ts  MapSettings.tsx  MapViewer.css  MapViewer.tsx  Tile.jsx  Visualizer.tsx
geozilla/geozilla-react/src/types/: FeatureCollectionExt.ts  FigureLayers.ts  LatLng.ts  Layers.ts
geozilla/geozilla-react/src/utils/: LayerUtils.ts  MapEventHandlers.css  MapEventHandlers.ts  layerUtils.ts
